Format,Email,Photo→→Manage

--- a/SafeCity2607last/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SafeCity2607last/Areas/Identity/Pages/Account/Register.cshtml
@@ -24,9 +24,9 @@
                     <div class="col-md-6">
                         <div class="form-row">
                             <div class="form-group col-md-4">
-                                <label asp-for="Input.photo"></label>
-                                <input asp-for="Input.photo" class="form-control" />
-                                <span asp-validation-for="Input.photo" class="text-danger"></span>
+                                <label asp-for="Input.ProfilePicture"></label>
+                                <input asp-for="Input.ProfilePicture" class="form-control" />
+                                <span asp-validation-for="Input.ProfilePicture" class="text-danger"></span>
                             </div>
                         </div>
                     </div>
