--- a/SafeCity2607last/Views/Admin/Index.cshtml
+++ b/SafeCity2607last/Views/Admin/Index.cshtml
@@ -19,7 +19,7 @@
         <th>City</th>
         <th>PhoneNumber</th>
         <th>PhoneNumber2</th>
-        <th>Photo</th>
+        <th>Profile Picture</th>
         <th>Datedebut</th>
         <th>DatefiN</th>
         <th>Email</th>
