--- a/SafeCity2607last/Views/Users/Index.cshtml
+++ b/SafeCity2607last/Views/Users/Index.cshtml
@@ -12,79 +12,80 @@
 }
 
 
-<section class="col-10">
+@*<section class="col-12 dropright">*@
 
-    <div class="card card-signin col-10">
-        <div class="card-body">
+<div class="card card-signin col-10 ">
+    <div class="card-body">
 
-            <a class="btn btn-secondary" asp-area="Identity" asp-page="/Account/Register">Create a new User</a>
-
-
+        <a class="btn btn-secondary" asp-area="Identity" asp-page="/Account/Register">Create a new User</a>
 
 
-            <table class="table table-sm table-bordered">
-                <tr>
-
-                    <th>FirstName</th>
-                    <th>LastName</th>
-                    @*<th>Function</th>
-                    <th>CIN</th>
-                    <th>Adresse</th>
-                    <th>City</th>*@
-                    <th>PhoneNumber</th>
-                    @*<th>PhoneNumber2</th>*@
-                    @*<th>Photo</th>*@
-                    @*<th>Datedebut</th>
-                        <th>DatefiN</th>*@
-                    <th>Email</th>
-                    @*<th>Password</th>*@
-                    @*<th>ConfPassword</th>*@
-                    @*<th>Lati</th>
-                    <th>Long</th>*@
-                    @*<tr><th>Nom</th><th>prenom</th><th>Email</th>*@
-                    @*<th>ville</th><th>date de naissance</th><th>adresse</th><th>CIN</th>
-                        <th>matricule</th><th>agence</th><th>manager</th><th>modifier</th><th>supprimer</th>*@
-                </tr>
-                @foreach (var user in Model)
-                {
-                    <tr>
-
-                        @*<td>@user.Id</td>*@
-                        <td>@user.FirstName</td>
-                        <td>@user.LastName</td>
-                        @*<td>@user.Id</td>*@
-                            @*<td>@user.CIN</td>
-                            <td>@user.Adresse</td>
-                            <td>@user.City</td>*@
-                        <td>@user.PhoneNumber</td>
-                        @*<td>@user.PhoneNumber2</td>
-                            <td>@user.photo</td>*@
-                        @*<td>@user.DateDebut</td>
-
-                            <td>@user.DateFin</td>*@
-                        <td>@user.Email</td>
-                        @*<td>@user.PasswordHash</td>*@
-                        @*<td>@user.Lati</td>
-                            <td>@user.Long</td>*@
 
 
-                        @*// to update user' information tou should connect with his identity and go to profil*@
-                        <td><a class="btn btn-sm" asp-action="Update" asp-route-id="@user.Id"><img src="~/img/edit.png" height="20" width="20" /></a></td>
-                        <td>
-                            <form asp-action="Delete" asp-route-id="@user.Id" method="post">
-                                <button type="submit" class="btn btn-sm ">
-                                    <img src="~/img/poubelle.png" height="20" width="20" />
-                                </button>
-                            </form>
-                        </td>
+        <table class="table table-sm table-bordered">
+            <tr>
+                <th class="text-center">Profile Picture</th>
+                <th class="text-center">First Name</th>
+                <th class="text-center">Last Name</th>
+                <th class="text-center">Email</th>
+                <th class="text-center">City</th>
+                <th class="text-center">Adresse</th>
+                <th class="text-center">CIN</th>
+                <th class="text-center">Phone Number</th>
+                <th class="text-center">Phone Number2</th>
+                <th class="text-center">Function</th>
 
-                    </tr>
-                }
-            </table>
+
+                @*<th>PhoneNumber2</th>*@
+                @*<th>Photo</th>*@
+                @*<th>Datedebut</th>
+        <th>DatefiN</th>*@
+
+                @*<th>Password</th>*@
+                @*<th>ConfPassword</th>*@
+                @*<th>Lati</th>
+        <th>Long</th>*@
+                @*<tr><th>Nom</th><th>prenom</th><th>Email</th>*@
+                @*<th>ville</th><th>date de naissance</th><th>adresse</th><th>CIN</th>
+        <th>matricule</th><th>agence</th><th>manager</th><th>modifier</th><th>supprimer</th>*@
+            </tr>
+            @foreach (var user in Model)
+            {
+        <tr>
+            <td>@user.ProfilePicture</td>
+            <td>@user.FirstName</td>
+            <td>@user.LastName</td>
+            <td>@user.Email</td>
+            <td>@user.City</td>
+            <td>@user.Adresse</td>
+            <td>@user.CIN</td>
+            <td>@user.PhoneNumber</td>
+            <td>@user.PhoneNumber2</td>
+            <td>@user.Function</td>
+       
+            @*<td>@user.DateDebut</td>
+
+              <td>@user.DateFin</td>*@
+
+          
 
 
-        </div>
+            @*// to update user' information tou should connect with his identity and go to profil*@
+            <td><a class="btn btn-sm" asp-action="Update" asp-route-id="@user.Id"><img src="~/img/edit.png" height="20" width="20" /></a></td>
+            <td>
+                <form asp-action="Delete" asp-route-id="@user.Id" method="post">
+                    <button type="submit" class="btn btn-sm ">
+                        <img src="~/img/poubelle.png" height="20" width="20" />
+                    </button>
+                </form>
+            </td>
+
+        </tr>
+            }
+        </table>
+
 
     </div>
 
-</section>
+</div>
+@*</section>*@
