--- a/SafeCity2607last/Views/Users/Update.cshtml
+++ b/SafeCity2607last/Views/Users/Update.cshtml
@@ -14,29 +14,35 @@
 
             <form asp-action="Update" method="post">
                 @*<div class="form-group">
-                        <label asp-for="Id"></label>
-                        <input asp-for="Id" class="form-control" disabled />
-                    </div>*@
+            <label asp-for="Id"></label>
+            <input asp-for="Id" class="form-control" disabled />
+        </div>*@
+
+
+                <div class="form-group">
+                    <label asp-for="LastName">Last Name</label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FirstName">First Name</label>
+                    <input asp-for="FirstName" class="form-control" />
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
 
                 <div class="form-group">
                     <label asp-for="Email"></label>
                     <input asp-for="Email" class="form-control" />
                 </div>
+
+                <div class="form-group">
+                    <label asp-for="PhoneNumber">Phone Number</label>
+                    <input asp-for="Email" class="form-control" />
+                </div>
+
                 <div class="form-group">
                     <label for="password">Password</label>
                     <input name="password" class="form-control" />
-                </div>
-
-
-                <div class="form-group">
-                    <label asp-for="LastName"></label>
-                    <input asp-for="LastName" class="form-control" />
-                    <span asp-validation-for="LastName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="FirstName"></label>
-                    <input asp-for="FirstName" class="form-control" />
-                    <span asp-validation-for="FirstName" class="text-danger"></span>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Save</button>
@@ -168,4 +174,4 @@
 
 <button type="submit" class="btn btn-primary">Register</button>
 @*</form>*@
-                                </div>
+                               
