--- a/SafeCity2607last/Views/Users/Update.cshtml
+++ b/SafeCity2607last/Views/Users/Update.cshtml
@@ -16,7 +16,7 @@
                 @*<div class="form-group">
             <label asp-for="Id"></label>
             <input asp-for="Id" class="form-control" disabled />
-        </div>*@
+        </div>**@
 
 
                 <div class="form-group">
