--- a/SafeCity2607last/Views/Shared/_LoginPartial.cshtml
+++ b/SafeCity2607last/Views/Shared/_LoginPartial.cshtml
@@ -31,6 +31,19 @@
 
 @if (SignInManager.IsSignedIn(User))
 {<ul class="navbar-nav">
+
+
+    @*pour afficher la photo de l'utilisateur au navbar*@
+    <li class="nav-item" style="align-self: center;">
+        @if (UserManager.GetUserAsync(User).Result.ProfilePicture != null)
+        {
+            <img style="width:40px;height:40px; object-fit:cover; border-radius:30px" src="data:image/*;base64,@(Convert.ToBase64String(UserManager.GetUserAsync(User).Result.ProfilePicture))">
+        }
+    </li>
+    @*---------------------------------------------------------------*@
+
+
+
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Bienvenue @User.Identity.Name </a>
     </li>
