--- a/SafeCity2607last/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/SafeCity2607last/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,7 +4,36 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
+
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-5 col-md-5 col-lg-5 mx-auto ">
+                <div class="card card-signin my-5 ">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">@ViewData["Title"]</h5>
+
+                        <form method="post">
+                            <div asp-validation-summary="All" class="text-danger"></div>
+                            <div class="form-group">
+                                <label asp-for="Input.Email"></label>
+                                <input asp-for="Input.Email" class="form-control" />
+                                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+@*<h1>@ViewData["Title"]</h1>
 <h4>Enter your email.</h4>
 <hr />
 <div class="row">
@@ -19,7 +48,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
-</div>
+</div>*@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
