--- a/SafeCity2607last/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SafeCity2607last/Areas/Identity/Pages/Account/Register.cshtml
@@ -59,21 +59,21 @@
                     </div>
 
 
-                     <div class="col-md-3">
-                            <div class="form-group">
-                                <label asp-for="Input.Lati" class="control-label">Latitude</label>
-                                <input asp-for="Input.Lati" class="form-control" />
-                                <span asp-validation-for="Input.Lati" class="text-danger"></span>
-                            </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label asp-for="Input.Lati" class="control-label">Latitude</label>
+                            <input asp-for="Input.Lati" class="form-control" />
+                            <span asp-validation-for="Input.Lati" class="text-danger"></span>
                         </div>
+                    </div>
 
                     <div class="col-md-3">
-                            <div class="form-group">
-                                <label asp-for="Input.Long" class="control-label">Longitude</label>
-                                <input asp-for="Input.Long" class="form-control" />
-                                <span asp-validation-for="Input.Long" class="text-danger"></span>
-                            </div>
-                     </div>
+                        <div class="form-group">
+                            <label asp-for="Input.Long" class="control-label">Longitude</label>
+                            <input asp-for="Input.Long" class="form-control" />
+                            <span asp-validation-for="Input.Long" class="text-danger"></span>
+                        </div>
+                    </div>
 
 
                 </div>
@@ -114,6 +114,7 @@
                             <label asp-for="Input.Email" class="control-label"></label>
                             <input asp-for="Input.Email" class="form-control " />
                             <span asp-validation-for="Input.Email" class="text-danger"></span>
+                            <input type="reset" value="Reset">
                         </div>
                     </div>
 
@@ -121,6 +122,7 @@
                         <div class="form-group">
                             <label asp-for="Input.Password" class="control-label"></label>
                             <input asp-for="Input.Password" class="form-control" />
+
                             <span asp-validation-for="Input.Password" class="text-danger"></span>
                         </div>
                     </div>
@@ -139,22 +141,32 @@
                     {
                         @if (User.IsInRole("SuperAdmin") || User.IsInRole("Admin"))
                         {
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-md-12">
                                 <label asp-for="Input.Function"></label>
-                                <input asp-for="Input.Function" class="form-control" />
+
                                 <select asp-for="Input.Function" class="form-control" asp-items='new SelectList(roles,"Id","Name")'> </select>
                                 <span asp-validation-for="Input.Function" class="text-danger"></span>
 
                             </div>
                         }
                     }
+
                     @*changer pour ajouter une photo ??*@
                     <div class="col-md-6">
-                            <div class="form-group">
-                                <label asp-for="Input.ProfilePicture" class="control-label"></label>
-                                <input asp-for="Input.ProfilePicture" class="form-control" />
-                                <span asp-validation-for="Input.ProfilePicture" class="text-danger"></span>
-                            </div>
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group">
+                            <label asp-for="Input.ProfilePicture" style="width: 100%;"></label>
+
+
+                            <img id="profilePicture" style="width:350px;height:350px; object-fit:cover" src="">
+                            <input type="file"
+                                   accept=".png,.jpg,.jpeg,.gif,.tif"
+                                   asp-for="Input.ProfilePicture"
+                                   class="form-control"
+                                   style="border:0px!important;padding: 0px;padding-top: 10px;padding-bottom: 30px;"
+                                   onchange="document.getElementById('profilePicture').src = window.URL.createObjectURL(this.files[0])" />
+                            <span asp-validation-for="Input.ProfilePicture" class="text-danger"></span>
+                        </div>
                     </div>
 
                     <div class="col-md-6">
@@ -168,7 +180,7 @@
 
                 <div class="form-group">
                     <input type="submit" value="submit" class="btn btn-sm btn-primary rounded-0 text-uppercase" />
-                    <a asp-action="~/Users" class="btn btn-sm btn-primary rounded-0 text-uppercase"><i class="fas fa-fast-backward"></i> Back to List</a>
+                    <a asp-action="~/Users" class="btn btn-sm btn-primary rounded-0 text-uppercase"><i class="fas fa-fast-backward"></i> Back to the list</a>
                 </div>
 
 
