--- a/SafeCity2607last/Views/Role/Index.cshtml
+++ b/SafeCity2607last/Views/Role/Index.cshtml
@@ -20,19 +20,44 @@
                     <tr><th>Name</th><th>Update</th></tr>
                     @foreach (var role in Model)
                     {
-                <tr>
-                    <td>@role.Name</td>
-                    <td><a class="btn btn-sm btn-primary" asp-action="Update" asp-route-id="@role.Id">Update</a></td>
-                    <td><a class="btn btn-sm btn-primary" asp-action="List" asp-route-id="@role.Id">Lister</a></td>
-                    @*<td><a class="btn btn-sm btn-primary" asp-action="Delete" asp-route-id="@role.Id">Delete</a></td>*@
-                    <td>
-                        <form asp-action="Delete" asp-route-id="@role.Id" method="post">
-                            <button type="submit" class="btn btn-sm ">
-                                <img src="~/img/poubelle.png" height="20" width="20" />
-                            </button>
-                        </form>
-                    </td>
-                </tr>
+                        <tr>
+                            <td>@role.Name</td>
+                            <td><a class="btn btn-sm btn-primary" asp-action="Update" asp-route-id="@role.Id">Update</a></td>
+
+                            <td><a class="btn btn-sm btn-primary" asp-action="List" asp-route-id="@role.Id">Lister</a></td>
+
+
+                            <td>
+
+                                <form method="post" asp-action="Delete" asp-route-id="@role.Id">
+
+                                    @*<span id="confirmDeleteSpan_@user.Id" style="display:none">
+                                        <span>Are you sure you want to delete?</span>
+                                        <button type="submit" class="btn btn-danger">Yes</button>
+                                        <a href="#" class="btn btn-primary"
+                                        onclick="confirmDelete('@user.Id', false)">No</a>
+                                        </span>*@
+
+
+                                    <span id="deleteSpan_@role.Id">
+                                        <a href="#" class="btn btn-danger"
+                                           onclick="confirmDelete('@role.Id', true)">Delete</a>
+                                    </span>
+
+
+                                    <span id="confirmDeleteSpan_@role.Id" style="display:none">
+                                        <span>Are you sure you want to delete?</span>
+                                        <button type="submit" class="btn btn-danger">Yes</button>
+                                        <a href="#" class="btn btn-primary"
+                                           onclick="confirmDelete('@role.Id', false)">No</a>
+                                    </span>
+
+                                </form>
+
+                            </td>
+
+
+                        </tr>
                     }
                 </table>
             </div>
@@ -42,3 +67,7 @@
     </div>
 
 </section>
+@section Scripts {
+
+    <script src="~/js/CustomScript.js"></script>
+}
