--- a/SafeCity2607last/Views/Users/Index.cshtml
+++ b/SafeCity2607last/Views/Users/Index.cshtml
@@ -56,14 +56,10 @@
             {
                 <tr>
                     <td>
-                        @if (SignInManager.IsSignedIn(User))
-
-                        {<li class="nav-item" style="align-self: center;">
-                                @if (UserManager.GetUserAsync(User).Result.ProfilePicture != null)
-                                {
-                                    <img style="width:40px;height:40px; object-fit:cover; border-radius:30px" src="data:image/*;base64,@(Convert.ToBase64String(UserManager.GetUserAsync(User).Result.ProfilePicture))">
-                                }
-                            </li>}
+                        @if (UserManager.GetUserAsync(User).Result.ProfilePicture != null)
+                        {
+                            <img style="width:40px;height:40px; object-fit:cover; border-radius:30px" src="data:image/*;base64,@(Convert.ToBase64String(UserManager.GetUserAsync(User).Result.ProfilePicture))">
+                        }
                     </td>
                     <td>@user.FirstName</td>
                     <td>@user.LastName</td>
@@ -83,16 +79,49 @@
 
 
                     @*// to update user' information tou should connect with his identity and go to profil*@
-                    <td><a class="btn btn-sm" asp-action="Update" asp-route-id="@user.Id"><img src="~/img/edit.png" height="20" width="20" /></a></td>
+                    <td><a class="btn btn-sm" asp-action="Update" asp-route-id="@user.Id"><img src="~/img/edit.png" height="35" width="25" /></a></td>
                     <td>
-                        <form asp-action="Delete" asp-route-id="@user.Id" method="post">
-                            <button type="submit" class="btn btn-sm ">
-                                <img src="~/img/poubelle.png" height="20" width="20" />
-                            </button>
+                        @*<form asp-action="Delete" asp-route-id="@user.Id" method="post">
+                                <button type="submit" class="btn btn-sm "  onclick="return confirm('Are you sure you want to delete user : @user.Email')">
+                                    <img src="~/img/poubelle.png" height="20" width="20" />
+                                </button>
+                            </form>*@
+
+
+                        @*  <div class="card-footer">*@
+                        <form method="post" asp-action="Delete" asp-route-id="@user.Id">
+
+                            @*<span id="confirmDeleteSpan_@user.Id" style="display:none">
+                                <span>Are you sure you want to delete?</span>
+                                <button type="submit" class="btn btn-danger">Yes</button>
+                                <a href="#" class="btn btn-primary"
+                                onclick="confirmDelete('@user.Id', false)">No</a>
+                                </span>*@
+
+
+                            <span id="deleteSpan_@user.Id">
+                                <a href="#" class="btn btn-danger"
+                                   onclick="confirmDelete('@user.Id', true)">Delete</a>
+                            </span>
+
+
+                            <span id="confirmDeleteSpan_@user.Id" style="display:none">
+                                <span>Are you sure you want to delete?</span>
+                                <button type="submit" class="btn btn-danger">Yes</button>
+                                <a href="#" class="btn btn-primary"
+                                   onclick="confirmDelete('@user.Id', false)">No</a>
+                            </span>
+
                         </form>
+
+
                     </td>
 
+
                 </tr>
+
+
+
             }
         </table>
 
@@ -100,4 +129,7 @@
     </div>
 
 </div>
-@*</section>*@
+@section Scripts {
+
+    <script src="~/js/CustomScript.js"></script>
+}
